--- a/package.json
+++ b/package.json
@@ -128,15 +128,16 @@
     "react-topbar-progress-indicator": "^1.0.0",
     "react-mdl": "^1.7.2",
     "redux": "^3.0.0",
-    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.0",
     "stylelint": "^7.2.0",
     "warning": "^3.0.0",
     "webpack": "^1.11.0",
     "whatwg-fetch": "^0.11.0",
-    "phenomic": "^0.20.0"
+    "phenomic": "^0.20.0",
+    "react-player": "^0.14.0"
   },
   "dependencies": {
-    "react-mdl": "^1.9.0"
+    "react-mdl": "^1.9.0",
+    "react-player": "^0.14.0"
   }
 }
