--- a/package.json
+++ b/package.json
@@ -134,10 +134,14 @@
     "webpack": "^1.11.0",
     "whatwg-fetch": "^0.11.0",
     "phenomic": "^0.20.0",
-    "react-player": "^0.14.0"
+    "react-player": "^0.14.0",
+    "react-slick": "^0.15",
+    "slick-carousel" : "^1.6.0"
   },
   "dependencies": {
     "react-mdl": "^1.9.0",
-    "react-player": "^0.14.0"
+    "react-player": "^0.14.0",
+    "react-slick": "^0.14.5",
+    "slick-carousel": "^1.6.0"
   }
 }
